@@ -17,6 +17,7 @@ HEADERS += NavigatorTab.h
 HEADERS += ScannerPage.h
 HEADERS += Scanner.h
 HEADERS += ChartToolbar.h
+HEADERS += ExtraToolbar.h
 HEADERS += MainMenubar.h
 HEADERS += TesterReport.h
 HEADERS += TesterRulePage.h
@@ -37,6 +38,7 @@ SOURCES += NavigatorTab.cpp
 SOURCES += ScannerPage.cpp
 SOURCES += Scanner.cpp
 SOURCES += ChartToolbar.cpp
+SOURCES += ExtraToolbar.cpp
 SOURCES += MainMenubar.cpp
 SOURCES += TesterReport.cpp
 SOURCES += TesterRulePage.cpp
